added a create project button to the html and made it so the projectFormLogic modal appears and closes

--- a/src/template.html
+++ b/src/template.html
@@ -38,7 +38,7 @@
         </dialog>
         <div class="ProjectDiv">
             <div class="buttonContentProjectDiv">
-
+                <button class="addProjectButton">Create Project</button>
             </div>
             <div class="contentProjectDiv">
 
